--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "angular-typewriter-effect": "0.0.1",
     "chart.js": "^3.6.0",
     "rxjs": "~6.6.0",
+    "t-writer.js": "^1.0.4",
     "tslib": "^2.3.0",
+    "wc-typed-js": "^1.0.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -30,7 +33,7 @@
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
+    "karma": "^6.3.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
